--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,21 +5,31 @@
   }
 
   body {
+    margin: 0;
+    padding: 0;
     font-family: system-ui;
     background: var(--main-bg-color);
-    height: 98vh;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    height: 100vh;
     color: #333;
   }
 
+  .container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .top{
+    width: 100vw;
+    height: 100px;
+    background-color: white;
+    margin-bottom: 50px;
+  }
+
   .logo {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    width: 150px;
+    width: 80px;
+    height: 80px;
+    padding: 10px 10px;
   }
 section.download {
     background: #fff;
